--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
   <link rel="stylesheet" href="css/style.css" />
   <title>Splatoon</title>
+
+  <style>
+    canvas {
+      background-color: rgba(151, 158, 129, 0.716);
+    }
+  </style>
 </head>
 
 <body>
